<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello maven.test!</string>
    <string name="app_name">HABSweetie</string>
    <string name="pref_url_key">open_hab_url</string>
    <string name="pref_url_title">openHAB URL</string>
    <string name="pref_url_summary">The URL to connect to openHAB (eg http://openhab:8080)</string>
    <string name="pref_username_key">pref_username</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_username_summary">The username to authenticate with</string>
    <string name="pref_password_key">pref_password</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_summary">Password to athenticate with</string>
    <string name="pref_authenticate_key">pref_authenticate</string>
    <string name="pref_authenticate_title">Authenticate?</string>
    <string name="pref_authenticate_summary">Use Basic Authentication to connect to openHAB?</string>
    <string name="main_menu_settings">Settings</string>
    <string name="pref_default_sitemap_url_key">pref_default_sitemap</string>
    <string name="select_sitemap_dialog_title">Select sitemap</string>
    <string name="select_sitemap_dialog_message">Select the sitemap to load</string>
    <string name="select_sitemap_dialog_always">Use this as default</string>
    <string name="select_sitemap_dialog_cancel">Cancel</string>
    <string name="select_sitemap_dialog_once">Use once</string>
    <string name="select_sitemap_dialog_use_as_default">Use as default</string>
    <string name="error_loading_sitemaps">Error while loading Sitemaps: {0}</string>
    <string name="warning_sitemap_needed">You need to select a sitemap</string>
    <string name="please_configure_this_app">Please configure this app and set the base URL for openHAB</string>
    <string name="error_sending_command">An error occurred while sending the command: {0}</string>
    <string name="error_generic">An error occurred: {0}</string>
    <string name="button_increase">+</string>
    <string name="button_decrase">-</string>
	<string name="wss_closed">Web Socket Connection is closed</string>
	<string name="error_no_sitemaps_found">No Sitemaps found</string>
	<string name="error_auth_failed">Can\'t authenticate with openHAB, please configure valid username and password</string>
	<string name="error_connect">Can\'t connect to the openHAB host? Is openHAB running?</string>
	<string name="error_timeout">The connection to openHAB timed out</string>
	<string name="message_loading_page">Loading openHAB page</string>
	<string name="pref_use_websockets_key">pref_use_websockets</string>
	<string name="pref_use_websockets_title">Use WebSockets</string>
	<string name="pref_use_websockets_summary">Try to use WebSockets to receive realtime updates of openHAB items?</string>
	<string name="pref_send_delay_key">pref_send_delay_key</string>
	<string name="pref_send_delay_title">Command send delay in seconds</string>
	<string name="pref_send_delay_summary">Some widgets like Setpoint or Slider can cause many commands to be send in a very short time frame. Especially on my mobile networks this can become quite problem. This lets you configure a delay for sending commands. Only the last command after the delay has passed will be send.</string>
	<string name="pref_cat_advanced_title">Advanced settings</string>
	<string name="pref_default_config_id">pref_default_config_id</string>
	<string name="connection_wizard_next">Next</string>
	<string name="connection_wizard_welcome">Welcome to HABSweetie</string>
	<string name="connection_wizard_welcome_text">This wizard will help you to configure HABSweetie so it can connect to your openHAB instance.</string>
	<string name="connection_wizard_step_1_introduction">First please choose a name for your openHAB instance. Something like "Home" or "Weekend Flat".</string>
	<string name="connection_wizard_internal_header">Internal Settings</string>
	<string name="connection_wizard_internal_introduction">Configure here how HABSweetie should connect if you are connected to your home WiFi.</string>
	<string name="connection_wizard_internal_help_url">Configure the internal URL of your openHAB instance. This is mostly something like http://openhab:8080 or http://192.168.1.10:8080. It is important to specify a complete URL with protocol prefix without the trailing slash.</string>
	<string name="connection_wizard_authenticate">Authenticate with openHAB?</string>
	<string name="connection_wizard_username">Username to use</string>
	<string name="connection_wizard_password">Password to use</string>
	<string name="connection_wizard_websocket_help">Some people experienced problems when using WebSockets to communicate with openHAB. If you are sure that WebSockets will work you can activate them here. But HABSweetie will also work well with the other means of communication.</string>
	<string name="connection_wizard_use_websockets">Use WebSockets</string>
	<string name="connection_wizard_authenticate_help">Do you need a username and password to connect to openHAB?</string>
	<string name="connection_wizard_external_header">External Settings</string>
	<string name="connection_wizard_external_introduction">Configure here how HABSweetie should connect if you are not at home.</string>
	<string name="connection_wizard_external_help_url">Configure the external URL of your openHAB instance. Most certainly you will enter here a DynDNS address.</string>
	<string name="message_loading_sitemaps">Loading sitemaps</string>
	<string name="menu_add_instance">Add instance</string>
	<string name="main_menu_manage_instances">Manage instances</string>
	<string name="instance_name">Name</string>
	<string name="instance_internal_url">Internal URL</string>
	<string name="instance_external_url">External URL</string>
	<string name="edit">Edit</string>
	<string name="default_sitemap">Default Sitemap</string>
	<string name="choose">Choose</string>
	<string name="save">Save</string>
	<string name="state_percent">Percent</string>
	<string name="state_number">Numer</string>
	<string name="state_text">Text</string>
	<string name="blurb_format">Send command {0} to item {1}</string>
	<string name="progress_load_items">Loading available items</string>
</resources>
